--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/queue": "^11.0",
+        "illuminate/queue": "^11.0|^12.0",
         "laravel-doctrine/orm": "^3.0"
     },
     "require-dev": {
